objects/tffa__Application__c.object
<CustomObject>
    <fields>
        <fullName>tffa__BundleName__c</fullName>
        <description>Unique product bundle name maintained in the system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Bundle name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Bundle__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Bundle code identifier</description>
        <label>Bundle</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR (3 AND 4))</booleanFilter>
            <errorMessage>Product Bundle not valid.</errorMessage>
            <filterItems>
                <field>tffa__Product__c.tffa__Type__c</field>
                <operation>equals</operation>
                <value>Bundle</value>
            </filterItems>
            <filterItems>
                <field>tffa__Product__c.tffa__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.tffa__Status__c</field>
                <operation>notEqual</operation>
                <value>In Progress</value>
            </filterItems>
            <filterItems>
                <field>$Source.tffa__Status__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipLabel>Bundled Applications</relationshipLabel>
        <relationshipName>BundledApplications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__BusinessLineOfCreditPurpose__c</fullName>
        <description>Primary purpose for business loc application</description>
        <label>Business line of credit purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__BusinessLineOfCreditPurpose</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__BusinessLoanProcessingMethod__c</fullName>
        <description>A value from a prescribed list that specifies the method used to process the Business Loan application. List includes different processing methods under the umbrella of SBA loans, Line of credit or standard business term loan. The main differences among the different loan types are the loan amounts, the processing times, and use of funds.</description>
        <label>Business Loan Processing Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__BusinessLoanProcessingMethod</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__BusinessLoanPurpose__c</fullName>
        <description>Primary purpose for business lending application</description>
        <label>Business Loan purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__BusinessLoanPurpose</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__BusinessRefinanceLoanPurpose__c</fullName>
        <description>Refinance Detailed purpose for business real estate loan</description>
        <label>Business refinance loan purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__BusinessRealEstateRefinanceLoanPurpose</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CDDStatus__c</fullName>
        <description>Overall CDDStatus (refer DueDiligence for CDD) across related Parties. Typically refers to CDDStatus of primary Party.</description>
        <label>CDD Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CancellationComments__c</fullName>
        <description>Additional notes on why the application was cancelled.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Cancellation comments</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__CancellationReason__c</fullName>
        <description>Reason why the application was cancelled.</description>
        <label>Cancellation reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ApplicationCancellationReason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CapacityComments__c</fullName>
        <description>Comments on Capacity of the borrowers to repay the loan</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Capacity Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>tffa__CapitalComments__c</fullName>
        <description>Comments on Capital of the borrowers</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Capital Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>tffa__CashoutPurposeBusiness__c</fullName>
        <description>A cash-out refinance is a refinancing of an existing mortgage loan for business purposes</description>
        <label>Cashout purpose business</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__CashoutPurposeBusiness</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CashoutPurposePersonal__c</fullName>
        <description>A cash-out refinance is a refinancing of an existing mortgage loan for personal purposes</description>
        <label>Cashout purpose personal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__CashoutPurposePersonal</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CashoutPurpose__c</fullName>
        <description>A cash-out refinance is a refinancing of an existing mortgage loan, where the new mortgage loan is for a larger amount than the existing mortgage loan, and you (the borrower) get the difference between the two loans in cash.</description>
        <label>Cashout purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__CashoutPurpose</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CharacterComments__c</fullName>
        <description>Comments on Character of borrower ,</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Character Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>tffa__CollateralComments__c</fullName>
        <description>Comments on Collateral used for the loan</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Collateral Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>tffa__Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A marker that indicates whether the Application has reached the end of its lifecyle. An Application is usually marked as completed when it reaches FUNDED (for deposits), DECLINED or DISBURSED (for lending) status.</description>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ConditionComments__c</fullName>
        <description>Comments on Condition on the loan applications</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Condition Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>tffa__CosignerExists__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether current education loan is applied with a Co-Signer</description>
        <label>Cosigner Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__CostCenterCode__c</fullName>
        <description>A cost center is any unit of an organisation to which costs or expenses are allocated to these units</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Cost Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__CounterOfferComments__c</fullName>
        <description>Additional information about the counter offer for the applicant to view. Derived from Counter Offer item&apos;s comments for an automated case. For manual counter offer proposed from back office, this will be filled in by the banker/reviewer.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Additional information about the counter offer for the applicant to view.</inlineHelpText>
        <label>Counter Offer comments</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__CounterOfferExpiresOn__c</fullName>
        <description>Date and time on which the counter offer expires.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Counter Offer expires on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__CounterOfferProductName__c</fullName>
        <description>Name of the counter offer product. Denormalized field.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Counter Offer product name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__CounterOfferProduct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>An alternative product offered to an applicant when they are found not eligible for the original product (based on some criteria). Acceptance of the counter offer product results in override of original product.</description>
        <label>Counter Offer product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Counter offer product must be of same category as original product</errorMessage>
            <filterItems>
                <field>tffa__Product__c.tffa__Category__c</field>
                <operation>equals</operation>
                <valueField>$Source.tffa__ProductCategory__c</valueField>
            </filterItems>
            <filterItems>
                <field>tffa__Product__c.tffa__Type__c</field>
                <operation>equals</operation>
                <value>Product</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipLabel>Counter Offer Applications</relationshipLabel>
        <relationshipName>CounterOfferApplications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__CounterOfferProposedOn__c</fullName>
        <description>Date and time on which the counter offer was proposed to the applicant.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Counter Offer proposed on</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tffa__CounterOfferRejectedComments__c</fullName>
        <description>Additional notes on why the counter offer was rejected by the applicant.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Counter Offer rejected comments</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__CounterOfferStatus__c</fullName>
        <description>Tracks the staus of the counter offer, whether it was accepted or rejected by the applicant.</description>
        <label>Counter Offer status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__CounterOfferStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CounterOffers__c</fullName>
        <description>A semicolon delimited list of products (ids) offered as counter offer to the original product. Usually the output of a decisioning process, in which case the DecisionOutcome is set to COUNTER_OFFER.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Counter offers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__CrediCardRejectedComments__c</fullName>
        <description>Additional notes on why the credit card offer was rejected by the applicant.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Credi card rejected comments</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__CreditApprovalReason__c</fullName>
        <description>Reason for approving the application in Credit decisioning stage.</description>
        <label>Credit Approval Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__CreditApprovalReason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CreditBureauStatus__c</fullName>
        <description>Overall CreditBureauStatus (refer DueDiligence for CREDIT_BUREAU) across related Parties. Typically refers to CreditBureauStatus of primary Party.</description>
        <label>Credit Bureau Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CreditCardLiabilityType__c</fullName>
        <description>Captures the liability type for the credit card</description>
        <label>Credit card liability type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__CreditCardLiabilityType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CreditCardPurpose__c</fullName>
        <description>Primary purpose for credit card application</description>
        <label>Credit card purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__CreditCardPurpose</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CreditDecisionNextAction__c</fullName>
        <description>Possible next actions to execute in a Credit decisioning process. Expressed as a semicolon delimited list of values.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit decision next action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__CreditDecisionOutcome__c</fullName>
        <description>Outcome of a Credit decisioning process.</description>
        <label>Credit Decision outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ApplicationDecisionOutcome</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CreditDecisionOverridden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If auto CreditDecisionOutcome was overridden.</description>
        <label>Credit Decision Overridden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__CreditDecisionOverrideComments__c</fullName>
        <description>Additional notes stating why the auto CreditDecisionOutcome was overridden.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Decision Override Comments</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__CreditDecisionStrategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Decision Strategy of related (Credit) Matrix. Can be used for analysing the efficacy of the strategy during Champion/Challenger testing. e.g. does the new strategy involving new set of rules (based on new facts) yield better results.</description>
        <label>Credit Decision Strategy</label>
        <referenceTo>tffa__DecisionStrategy__c</referenceTo>
        <relationshipLabel>Credit Decisioned Applications</relationshipLabel>
        <relationshipName>CreditDecisionedApplications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__CreditDeclinedReason__c</fullName>
        <description>Reason for declining the application in Credit decisioning stage.</description>
        <label>Credit Declined Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__CreditDeclinedReason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CrossSell__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether current application is due to cross-sell of product</description>
        <label>Cross sell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__CryptoAccountStatus__c</fullName>
        <description>Captures the status of the crypto custodial account</description>
        <label>Crypto account status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__CryptoAccountStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CryptoCurrencyBalance__c</fullName>
        <description>Crypto Custodial account balance in the crypto currency</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Crypto currency balance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__CryptoCurrency__c</fullName>
        <description>Captures Crypto currency types</description>
        <label>Crypto currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__CryptoCurrencyType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CryptoCustodian__c</fullName>
        <description>Name of the Third-Party Digital Asset Custody solutions provider</description>
        <label>Crypto custodian</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__CryptoCustodianType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CryptoMasterAccountNumber__c</fullName>
        <description>The entity for all transactions associated with a specific program (i.e. BTC Trading
Platform) available through a Tenant or Partner. A Master Account contains all
individual customer Accounts for the specific program. Reconciliation happens at
this level.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Crypto master account number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__CryptoProgramId__c</fullName>
        <description>Id of the crypto custodial program</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Crypto program id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__CryptoProgramName__c</fullName>
        <description>Name of the crypto custodial program</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Crypto program name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__CryptoSymbol__c</fullName>
        <description>Symbol of the crypto currency</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Crypto symbol</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DebitBureauStatus__c</fullName>
        <description>Overall DebitBureauStatus (refer DueDiligence for DEBIT_BUREAU) across related Parties. Typically refers to DebitBureauStatus of primary Party.</description>
        <label>Debit Bureau Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DueDiligenceStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__DebtServiceCoverageRatio__c</fullName>
        <description>This ratio compares your business’s income and assets with the total amount of funding it’s already borrowed. You might have trouble with approval if your DSCR is below 1.25.</description>
        <label>Debt Service Coverage Ratio (DSCR)</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>tffa__DebtToAssetRatio__c</fullName>
        <description>Underwriters often consider this if you’re applying for a loan without collateral. They want to make sure you have enough in assets — usually equipment or property — to cover the cost of the loan in the event that you default.</description>
        <label>Debt to Asset Ratio</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>tffa__DebtToIncomeRatio__c</fullName>
        <description>It is a ratio that considers a borrower’s debt payments as a percentage of their total income. High quality lenders will require a debt-to-income ratio of approximately 36% or less</description>
        <label>Debt to Income Ratio (DTI)</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>tffa__DecedentsBirthDate__c</fullName>
        <description>The birth date of the decedent of the IRA plan.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Decedents birth date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__DecedentsDeathDate__c</fullName>
        <description>The date of death of the decedent of the IRA plan.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Decedents death date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__DecedentsFirstName__c</fullName>
        <description>The first name of the decedent of the IRA plan.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Decedents first name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DecedentsLastName__c</fullName>
        <description>The last name of the decedent of the IRA plan.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Decedents last name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DecedentsMiddleName__c</fullName>
        <description>The middle name of the decedent of the IRA plan.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Decedents middle name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DecedentsSSN__c</fullName>
        <description>The SSN of the decedent of the IRA plan.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Decedents SSN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DecedentsSuffix__c</fullName>
        <description>The suffix name of the decedent of the IRA plan.</description>
        <label>Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__Suffix</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__DeclinedComments__c</fullName>
        <description>Additional notes on why the application was declined.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Declined comments</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__DeclinedReason__c</fullName>
        <description>Reason why the application was declined. A short text, typically used for grouping.</description>
        <label>Declined reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ApplicationDeclinedReason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__DepositBoxAccountNumber__c</fullName>
        <description>Box Number of the safe deposit box. Include 3 pieces of information, the branch number, region code and box number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Deposit box account number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DepositBoxCode__c</fullName>
        <description>Code of the safe deposit box as identified by the core banking system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Deposit box code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DepositBoxDescription__c</fullName>
        <description>Description of the Safe Deposit Box</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Deposit box description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__DepositBoxExpirationDate__c</fullName>
        <description>Date on which the box lease expires</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Deposit box expiration date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__DepositBoxExpirationTerm__c</fullName>
        <description>Deposit box Expiration Duration in months</description>
        <label>Deposit Box Expiration Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__DepositBoxKeyDepositAmount__c</fullName>
        <description>Captures the initial one time deposit amount for the box</description>
        <label>Deposit box key deposit amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__DepositBoxLocationCode__c</fullName>
        <description>Unique code of the current geographical location/branch of the deposit box</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Deposit Box Location (Branch) Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DepositBoxRentalDiscount__c</fullName>
        <description>Discount applied to the rental fee of safe Deposit box</description>
        <label>Deposit Box Rental Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__DepositBoxRentalFee__c</fullName>
        <description>Captures the annual rental amount of the box</description>
        <label>Deposit box rental fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__DepositBoxSize__c</fullName>
        <description>Captures the size of the box</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Deposit box size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__DepositBoxStartDate__c</fullName>
        <description>Date on which the box lease starts</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Deposit Box Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__Description__c</fullName>
        <description>Additional information about the application. Usually it is same as product description.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceAddOnsPrice__c</fullName>
        <description>Capturs total cost for the additional devices applied</description>
        <label>Device Add Ons Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceBillingFrequency__c</fullName>
        <description>Captures payment billing frequency for the device</description>
        <label>Device Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__BillingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__DevicePurchasePrice__c</fullName>
        <description>Captures device one time purchase cost</description>
        <label>Device Purchase Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceQuantity__c</fullName>
        <description>Captures total number of devices applied</description>
        <label>Device Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__DeviceRentalFees__c</fullName>
        <description>Captures the monthly rental fees for the device</description>
        <label>Device Rental Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__DiscountPoints__c</fullName>
        <description>Mortgage points, also known as discount points, are fees paid directly to the lender at closing in exchange for a reduced interest rate.</description>
        <label>Discount points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__DownPaymentPercentage__c</fullName>
        <description>Percentage of down payment amount with respect to requested amount for the lending application</description>
        <label>Down payment percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__DownPayment__c</fullName>
        <description>Total amount of down payment captured in the lending application</description>
        <label>Down payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__EducationCompletionDate__c</fullName>
        <description>Expected Graduation Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Education Completion date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__EducationEndDate__c</fullName>
        <description>End date of the education captured for education loan application</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Education End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__EducationGrade__c</fullName>
        <description>List of education grades maintained in the system</description>
        <label>Education grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__EducationGrade</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__EducationMajor__c</fullName>
        <description>List of education majors maintained in the system and captured for education loan application</description>
        <label>Education major</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__EducationMajor</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__EducationStartDate__c</fullName>
        <description>Start date of the course for which applicant is applying for education loan</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Education Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__EffectiveRate__c</fullName>
        <description>The final bought down interest rate. The rate that the applicant will pay after the buydown is applied.</description>
        <label>Effective rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__EstimatedClosingCost__c</fullName>
        <description>Estimated cost of a mortgage loan including fees and charges applicable as part of the application.</description>
        <label>Estimated closing cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__ExchangeVehicleMake__c</fullName>
        <description>Make of the exchange vehicle</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Exchange vehicle make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ExchangeVehicleMarketValue__c</fullName>
        <description>Current market value of the exchange vehicle as per valuation</description>
        <label>Exchange vehicle market value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__ExchangeVehicleModel__c</fullName>
        <description>Model of the exchange vehicle</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Exchange vehicle model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>